# snack

./: CMakeLists.txt  README.md  Snack.vcxproj  Snack.vcxproj.filters  script.sn  script2.sn  script2_process.sn  script3.sn  script_processed.html  snack.vcxproj  snack.vcxproj.filters
Debug/: vc140.idb
Debug/Snack.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Snack.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  main.cpp  sallocator.h  sast.h  sconst.cpp  sconst.h  serror.h  sparser.cpp  sparser.h  spis.cpp  spis.h  spp.cpp  spp.h  spreprocessor.cpp  spreprocessor.h  stbin.h  stcall.h  stcontext.h  stexp.cpp  stexp.h  stfunc.h  stokenizer.cpp  stokenizer.h  ststmt.h  ststruct.cpp  ststruct.h  sttype.cpp  sttype.h  stvar.h  stype.h  sutils.cpp  sutils.h
src/libstd/: math_vector.sn
